multiwindow worked, but close button don't work for some reasons

--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HQ Desktop</title>
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
+
+    <script src="/script.js"></script>
 </head>
 
 <body>
-    <div class="window template">
+    <div id="windows">
+
+    </div>
+    <!-- <div class="window template">
         <div class="title">
             <div class="actual-title">
                 EPIC
@@ -27,8 +33,7 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
         </div>
-    </div>
+    </div> -->
 </body>
-<script src="/script.js"></script>
 
 </html>
