--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HQ Desktop</title>
     <meta name="theme-color" content="rgb(0, 0, 0)">
+    <link rel="preconnect" href="https://fonts.bunny.net">
+<link href="https://fonts.bunny.net/css?family=inter:300" rel="stylesheet" />
 </head>
 
 <noscript>
